<resources>
    <string name="app_name">InClass03</string>
    <string name="nameText">Name</string>
    <string name="emailText">Email</string>
    <string name="addressText">Address</string>
    <string name="phoneText">Phone Number</string>
    <string name="moodText">Your Mood?</string>
    <string name="displayName">Name:</string>
    <string name="displayEmail">Email:</string>
    <string name="displayAddress">Address:</string>
    <string name="displayPhone">Phone:</string>
    <string name="displayMood">Mood:</string>
    <string name="editPrompt">Mood</string>
    <string name="textAssest">Name</string>
    <string name="showName">Name</string>
    <string name="showEmail">Email</string>
    <string name="showAddress">Address</string>
    <string name="showPhone">Phone</string>
    <string name="showMood">Mood</string>
    <string name="submitText">Submit</string>
    <string name="saveText">Save</string>
    <string name="textInfo">User Information</string>
    <string name="hintPhone">Phone Number</string>
    <string name="hintName">Name</string>
    <string name="hintMood">Your Mood?</string>
    <string name="hintEmail">Email</string>
    <string name="hintAddress">Address</string>
</resources>
